# imperial-desk

./: AGENTS.md  Cargo.toml  WORKFLOW.md
crates/imperial-desk-agent/: Cargo.toml
crates/imperial-desk-agent/src/: lib.rs
crates/imperial-desk-browser/: Cargo.toml
crates/imperial-desk-browser/src/: lib.rs
crates/imperial-desk-cli/: Cargo.toml
crates/imperial-desk-cli/src/: main.rs
crates/imperial-desk-core/: Cargo.toml
crates/imperial-desk-provider/: Cargo.toml
crates/imperial-desk-provider/src/: lib.rs  registry.rs
crates/imperial-desk-provider/src/providers/: mod.rs
crates/imperial-desk-provider/src/providers/deepseek/api/: client.rs  provider.rs
crates/imperial-desk-provider/src/providers/deepseek/common/: session.rs
crates/imperial-desk-provider/src/providers/deepseek/web/: mod.rs  mutations.rs  provider.rs  selectors.rs
crates/imperial-desk-state/: Cargo.toml
crates/imperial-desk-state/src/: lib.rs
crates/web-llm-agent/: Cargo.toml
crates/web-llm-agent/src/: lib.rs
crates/web-llm-browser/: Cargo.toml
crates/web-llm-browser/src/: lib.rs
crates/web-llm-cli/: Cargo.toml
crates/web-llm-cli/src/: login_tui.rs  main.rs
crates/web-llm-core/: Cargo.toml
crates/web-llm-core/src/: lib.rs
crates/web-llm-provider/: Cargo.toml
crates/web-llm-provider/src/: registry.rs
crates/web-llm-provider/src/providers/deepseek/: mod.rs
crates/web-llm-provider/src/providers/deepseek/api/: mod.rs  provider.rs
crates/web-llm-provider/src/providers/deepseek/common/: mod.rs  models.rs  session.rs
crates/web-llm-provider/src/providers/deepseek/web/: mutations.rs  parser.rs  provider.rs
crates/web-llm-state/: Cargo.toml
crates/web-llm-state/src/: lib.rs
docs/: design.md
