[package]
name = "imperial-desk-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
serde.workspace = true
imperial-desk-core = { path = "../imperial-desk-core" }

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
