[package]
name = "imperial-desk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "imperial-desk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
imperial-desk-agent = { path = "../imperial-desk-agent" }
imperial-desk-core = { path = "../imperial-desk-core" }
imperial-desk-provider = { path = "../imperial-desk-provider" }
imperial-desk-state = { path = "../imperial-desk-state" }
