[package]
name = "imperial-desk-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
imperial-desk-browser = { path = "../imperial-desk-browser" }
imperial-desk-core = { path = "../imperial-desk-core" }
imperial-desk-state = { path = "../imperial-desk-state" }
