[package]
name = "imperial-desk-state"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
imperial-desk-core = { path = "../imperial-desk-core" }
