[package]
name = "web-llm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "web-llm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
web-llm-agent = { path = "../web-llm-agent" }
web-llm-core = { path = "../web-llm-core" }
web-llm-provider = { path = "../web-llm-provider" }
web-llm-state = { path = "../web-llm-state" }
