[package]
name = "web-llm-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
web-llm-browser = { path = "../web-llm-browser" }
web-llm-core = { path = "../web-llm-core" }
web-llm-state = { path = "../web-llm-state" }
